@@ -212,6 +212,12 @@ Summary of important user-visible changes for version 4.4 (yyyy-mm-dd):
       z_test.m
       z_test_2.m
 
+ ** The following image functions have been moved from core Octave to
+    the image package available from Octave Forge.
+
+    ntsc2rgb
+    rgb2ntsc
+
  ** Other new functions added in 4.4:
 
       bounds
